@@ -15,6 +15,7 @@ Bug fixes:
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
 Cleanup:
+- [#5605] Rename tx_seminars_ViewHelper_CommaSeparatedTitles to Tx_Seminars_ViewHelper_CommaSeparatedTitles
 - [#5606] Rename tx_seminars_Service_SingleViewLinkBuilder to Tx_Seminars_Service_SingleViewLinkBuilder
 - [#5604] Rename tx_seminars_OldModel_Organizer to Tx_Seminars_OldModel_Organizer
 - [#5603] Rename tx_seminars_OldModel_Category to Tx_Seminars_OldModel_Category
